--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,18 @@
 
 @layer components {
   .button {
-    @apply inline-block text-white py-2 px-4 rounded-lg;
+    @apply inline-block text-white py-2 px-4 rounded-lg bg-[#272727] hover:bg-[#767676];
+  }
+
+  .bg-main {
+    @apply bg-[#0f0f0f];
+  }
+
+  .text-primary {
+    @apply text-[#FFFFFF];
+  }
+
+  .text-secondary {
+    @apply text-[#AAAAAA];
   }
 }
