--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,8 +11,8 @@
     @apply inline-block text-white py-2 px-2 rounded-full bg-[#272727] hover:bg-[#767676];
   }
 
-  .stream-container {
-    @apply bg-[#0f0f0f] w-full flex-1 flex flex-col items-center md:flex-row gap-4 md:items-stretch justify-between;
+  .bg-main {
+    @apply bg-[#0f0f0f] h-dvh w-full flex flex-col items-center md:flex-row gap-4 md:items-start justify-between;
   }
 
   .text-primary {
