change: margin and gap changed for mobile view

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,11 +12,11 @@
 
 @layer components {
   .button {
-    @apply inline-block text-white py-2 px-4 rounded-lg transition-colors duration-300 ease-in-out bg-[#272727] hover:bg-[#767676];
+    @apply flex text-white py-1 px-1  md:py-4 md:px-2 rounded-lg transition-colors duration-300 ease-in-out bg-[#272727] hover:bg-[#767676];
   }
 
   .media-button {
-    @apply inline-block text-white py-2 px-2 rounded-full bg-[#272727] hover:bg-[#767676];
+    @apply inline-block text-white py-1 px-1 md:py-2 md:px-2 rounded-full bg-[#272727] hover:bg-[#767676];
   }
 
   .bg-main {
