--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,11 +16,11 @@
   }
 
   .waitlist-form__input-container {
-    @apply flex w-full items-center my-6 gap-2;
+    @apply flex w-full items-center my-3 md:my-6 gap-2;
   }
 
   .waitlist-form__label {
-    @apply text-2xl font-bold;
+    @apply text-xl md:text-2xl font-bold;
   }
 
   .waitlist-form__input {
