--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'hughs';
+  src: url(assets/fonts/Hughs.otf) format('truetype');
+}
+
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 @media (min-width: 768px) {
   .stream-layout {
     display: grid;
@@ -10,13 +19,25 @@
   }
 }
 
-@layer components {
-  .landing-page__bg {
-    @apply bg-gradient-to-r from-[#080808] via-[#056755] to-[#00e5bc]
-  }
+.landing-page__bg {
+  background-image: linear-gradient(90deg, #080808,#080808, #056755, #00e5bc);
+}
 
+@layer components {
   .waitlist-form__input-container {
     @apply flex w-full items-center my-3 md:my-6 gap-2;
+  }
+
+  .ff-hughs {
+    font-family: 'hughs';
+  }
+
+  .ff-sm__aileron {
+    font-family: 'aileron-sb';
+  }
+
+  .ff-b__aileron {
+    font-family: 'aileron-b';
   }
 
   .waitlist-form__label {
