--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,7 +20,7 @@
 }
 
 .landing-page__bg {
-  background-image: linear-gradient(90deg, #080808,#080808, #056755, #00e5bc);
+  background-image: linear-gradient(135deg, #080808 50%, #056755 97.5%);
 }
 
 @layer components {
