--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,10 @@
     font-family: 'hughs';
   }
 
+  .ff-roboto {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+  }
+
   .navbar {
     @apply w-full flex items-center justify-between px-6 bg-black border-b-[1px] border-b-white; 
   }
