--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,15 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
   }
 
+  .sidebar-backdrop {
+    background: rgb(0,0,0);
+    background: linear-gradient(to right, rgba(38, 38, 38, 0.25) 5%, rgba(13, 13, 13, 0.75) 40%, rgba(0, 0, 0, 1) 100%);
+  }
+
+  .hover-zoom:hover div img {
+    scale: 0.975;
+  }
+
   .navbar {
     @apply w-full flex items-center justify-between px-6 md:px-[3.5rem] py-2 bg-black border-b-[1px] border-b-white; 
   }
