--- a/client/src/index.css
+++ b/client/src/index.css
@@ -113,6 +113,19 @@
   .section {
     @apply px-6 md:px-[3.5rem] py-4 md:py-0;
   }
+
+  .blog-heading {
+    @apply text-[24px] md:text-[48px] font-bold leading-[1.2];
+  }
+
+  .blog-sub-heading {
+    @apply text-[22px] md:text-[34px] font-bold leading-[1.2];
+  }
+
+  .blog-paragraph {
+    @apply text-[16px] md:text-[18px] leading-[28px] md:leading-[30px];
+  }
+
 }
 
 input[type="number"]::-webkit-inner-spin-button,
