--- a/client/src/index.css
+++ b/client/src/index.css
@@ -111,7 +111,7 @@
   /* blogs */
 
   .section {
-    @apply px-6 md:px-[3.5rem] py-4 md:py-0;
+    @apply px-6 md:px-[3.5rem] py-4 md:py-0 mt-12 md:mt-20;
   }
 
   .blog-heading {
@@ -124,6 +124,14 @@
 
   .blog-paragraph {
     @apply text-[16px] md:text-[18px] leading-[28px] md:leading-[30px];
+  }
+
+  .blog-points {
+    @apply ms-6;
+  }
+
+  .blog-point {
+    @apply mt-4 list-disc
   }
 
 }
